--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-bb399410-0493-48f6-8a81-6db34139aa87;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "Server=localhost;userid=developer;password=40275028;database=saleswebmvcappdb"
   }
 }
